src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color : #191918;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}
* {
    margin : 0; padding : 0;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
    box-sizing: border-box;         /* Opera/IE 8+ */
}

a  {
    text-decoration: none;
    color : inherit !important;
}

.main{
    width : 100vw;
    padding : 56px 100px 0 100px;
}
.main .section{
    width : 1240px;
    margin : 0 auto;
    margin-bottom: 200px;
}
.main .section .title{
    font-size: 40px;
    font-weight: 800;
    padding : 50px 0;
}
.main .section .text{
    font-size :24px;
    line-height: 1.88;
}

@media screen and (max-width : 1440px){
    .main .section{
        width : 100%;
    }
}

